[package]
name = "clwrap"
version = "0.3.0"
edition = "2021"
rust-version = "1.60"

authors = ["Yuki Yamaura <ymruki@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Command line wrapper for autologin then execute command"
homepage = "https://github.com/yamaura/clwrap"
repository = "https://github.com/yamaura/clwrap"
readme = "README.md"
keywords = []
categories = ["command-line-interface", "command-line-utilities"]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[package.metadata.release]
push = false
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[dependencies]
regex = "1"
thiserror = "1"
tracing = "0.1.37"
expectrl = { version = "0.6.0", features = ["async"] }
futures-lite = "1.12.0"
typed-builder = "0.11.0"

# dependencies for commandl line utils
clap = { version = "4.0.29", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"], optional = true }
anyhow = { version = "1.0.66", optional = true }


[features]
cmdline = ["clap", "tracing-subscriber", "anyhow"]

[[bin]]
name = "clwrap"
path = "src/main.rs"
required-features = ["cmdline"]
